--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= component_controller data: { 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
-	<div class="flex justify-between p-5 border-b md:border-0 border-gray-50">
+	<div class="flex bg-white justify-between p-5 border-b md:border-0 border-gray-50">
 		<div class="pr-6">
 			<div class="mb-1 text-sm  text-gray-500">
 				<%= helpers.format_hour @event.first_day_time %>h ·
