--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -2,7 +2,7 @@
 	<div class="flex p-5 border-b md:border-0 border-gray-50">
 		<div class="pr-6 flex-1">
 			<div class="mb-1 text-sm  text-gray-400">
-				<%= @event.categories_primary_name.titleize %>
+				<%= helpers.day_of_week(@event.start_time).titlecase %> · <%= helpers.format_hour @event.first_day_time %>h · <%= @event.categories_primary_name.titleize %>
 			</div>
 			<%= content_tag :a,
 											href:  event_path(@event),
@@ -14,8 +14,9 @@
 											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
 				<%= @event.details_name %>
 			<% end %>
-			<div class="text-sm  text-gray-500">
-				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
+			<div class="text-sm">
+				<span class="text-gray-400">Daqui <%= helpers.distance_of_time_in_words @event.start_time, DateTime.now %> em</span>
+				<span class="text-gray-500"><%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %></span>
 			</div>
 			<div class="flex my-1 -ml-2">
 				<%= reflex_tag :like, :div, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
