--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -24,34 +24,30 @@
 				</div>
 			</div>
 		</div>
-		<div class="flex p-5">
-			<div class="flex flex-col my-1 mr-1 space-y-2">
-				<%= render partial: 'components/taste_button',
-									 locals:  {
-											 user:            @user,
-											 resource:        @event,
-											 taste_type:      :save,
-											 taste_sentiment: :positive,
-											 parent_id:       dom_id(@event),
-											 opts:            {
-													 partial: 'events/large_event'
-											 }
-									 } %>
-				<%= render partial: 'components/taste_button',
-									 locals:  {
-											 user:            @user,
-											 resource:        @event,
-											 taste_type:      :dislike,
-											 taste_sentiment: :negative,
-											 parent_id:       dom_id(@event),
-											 opts:            {
-													 partial: 'events/large_event'
-											 }
-									 } %>
-			</div>
-			<h1 class="px-3 mb-5 text-2xl font-medium leading-tight text-gray-700 md:px-0 md:text-4xl">
+		<div class="p-5">
+			<h1 class="px-3 mb-2 text-2xl font-medium leading-tight text-gray-700 md:px-0 md:text-4xl">
 				<%= @event.details_name %>
 			</h1>
+			<div class="flex items-center -ml-1">
+				<%= reflex_tag :like,
+											 :div,
+											 class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+					<svg class="<%= helpers.class_names 'fill-current h-6 hover:scale-150 w-6',
+																							{'text-gray-500':  !@user&.like?(@event),
+																							 'text-green-500': @user&.like?(@event)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+						<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
+					</svg>
+				<% end %>
+				<%= reflex_tag :dislike, :div, class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+					<svg class="<%= helpers.class_names 'fill-current h-6 hover:scale-150 w-6',
+																							{'text-gray-500': !@user&.dislike?(@event),
+																							 'text-red-500':  @user&.dislike?(@event)} %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+						<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+					</svg>
+				<% end %>
+			</div>
 		</div>
 		<div class="flex p-5 border-t border-b border-gray-100">
 			<div class="flex flex-col justify-center px-3 py-2 my-auto mr-3 text-center text-green-500 bg-green-100 h-content rounded-xl w-content">
