--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -58,6 +58,7 @@
 
 
 
+
 </script>
 
 <script type="application/ld+json">
@@ -99,6 +100,7 @@
     "validFrom": "<%= @event.ld_json.valid_from %>"
   }
 }
+
 </script>
 
 <section id="page" class="max-w-screen-lg grid-cols-12 pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
@@ -106,51 +108,57 @@
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
-    <div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100">
-      <h2 class="px-5 font-bold text-gray-700 uppercase">Similares</h2>
-      <div class="md:space-y-2">
-        <% @similar_events.each do |similar_event| %>
-          <div class="flex justify-between px-5 py-2 border-b md:border-0 border-gray-50">
-            <div class="pr-6">
-              <div class="mb-1 text-sm  text-gray-600">
-                <%= I18n.l(similar_event.start_time, format: :long) %>
-                às <%= format_hour similar_event.first_day_time %>h
-                · <%= similar_event.categories_primary_name.titleize %>
-              </div>
-              <%= content_tag :a,
-                              href:  event_path(similar_event),
-                              data:  {
-                                  action:     'click->main-sidebar--horizontal-event#openEvent',
-                                  url:        event_path(similar_event),
-                                  'event-id': similar_event.id
-                              },
-                              class: 'md:hover:underline mb-1 leading-snug text-gray-700' do %>
-                <%= similar_event.details_name %>
-              <% end %>
-              <div class="text-sm  text-gray-500">
-                <%= link_to limit_place_name_size(similar_event.place_details_name, 24), place_path(similar_event.place), class: 'md:hover:underline' %>
-              </div>
-            </div>
-            <div>
-              <div data-controller="ripple" class="relative w-24 mt-6 overflow-hidden rounded shadow-xs ripple ripple-white">
-                <%= link_to event_path(similar_event),
-                            data: {
-                                action:     'click->main-sidebar--horizontal-event#openEvent',
-                                'event-id': similar_event.id
-                            } do %>
-                  <div class="bg-gray-50 aspect-ratio-16/9"></div>
-                  <%= image_tag shrine_image_url(similar_event, :feed), {
-                      loading: :lazy,
-                      class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
-                      onerror: "this.style.opacity='0'"
-                  } rescue nil %>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
+		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100">
+			<h2 class="px-5 font-bold text-gray-700 uppercase">Similares</h2>
+			<div class="md:space-y-2">
+				<% if @similar_events.present? %>
+					<% @similar_events.each do |similar_event| %>
+						<div class="flex justify-between px-5 py-2 border-b md:border-0 border-gray-50">
+							<div class="pr-6">
+								<div class="mb-1 text-sm  text-gray-600">
+									<%= I18n.l(similar_event.start_time, format: :long) %>
+									às <%= format_hour similar_event.first_day_time %>h
+									· <%= similar_event.categories_primary_name.titleize %>
+								</div>
+								<%= content_tag :a,
+																href:  event_path(similar_event),
+																data:  {
+																	action:     'click->main-sidebar--horizontal-event#openEvent',
+																	url:        event_path(similar_event),
+																	'event-id': similar_event.id
+																},
+																class: 'md:hover:underline mb-1 leading-snug text-gray-700' do %>
+									<%= similar_event.details_name %>
+								<% end %>
+								<div class="text-sm  text-gray-500">
+									<%= link_to limit_place_name_size(similar_event.place_details_name, 24), place_path(similar_event.place), class: 'md:hover:underline' %>
+								</div>
+							</div>
+							<div>
+								<div data-controller="ripple" class="relative w-24 mt-6 overflow-hidden rounded shadow-xs ripple ripple-white">
+									<%= link_to event_path(similar_event),
+															data: {
+																action:     'click->main-sidebar--horizontal-event#openEvent',
+																'event-id': similar_event.id
+															} do %>
+										<div class="bg-gray-50 aspect-ratio-16/9"></div>
+										<%= image_tag shrine_image_url(similar_event, :feed), {
+											loading: :lazy,
+											class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
+											onerror: "this.style.opacity='0'"
+										} rescue nil %>
+									<% end %>
+								</div>
+							</div>
+						</div>
+					<% end %>
+				<% else %>
+					<div class="px-5 mt-4">
+						Sem eventos similares
+					</div>
+				<% end %>
+			</div>
+		</div>
 	</div>
 
 	<div class="fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-400 cursor-pointer md:hidden bg-gray-50">
@@ -165,7 +173,7 @@
 				 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 				 data-share-button-title="<%= @event.details_name %>"
 				 data-share-button-url="<%= event_url(@event, format: :html) %>"
-		     data-action="click->share-button#share">
+				 data-action="click->share-button#share">
 			<input class="absolute opacity-0" style="bottom: -30px" data-target="share-button.input" type="text" value="<%= event_url(@event, format: :html) %>">
 			<div>Compartilhar</div>
 			<svg class="h-4 text-gray-300 fill-current" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
