--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -21,7 +21,7 @@
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
 			</div>
 			<div class="flex my-1 -ml-2">
-				<%= reflex_tag :like, :div, id: dom_id(@event, :like), class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+				<%= reflex_tag :like, :div, id: dom_id(@event, :like), class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																							{ 'text-gray-200 hover:text-gray-300': !@user&.like?(@event),
 																								'text-green-500':                    @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
