--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,39 +1,71 @@
-<div class="py-1 mt-2 bg-white shadow-sm is-animated mb-20 md:mt-32">
+<%= render Modal::SignInComponent.new(key: 'modal-sign-in', text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
 
-	<%= notice %>
-
-	<% unless @events&.suggestions.blank? %>
-		<div class="px-5 mx-auto mb-10 md:px-0 md:w-9/12">
-			<h2 class="font-semibold text-gray-800">Você quis dizer?</h2>
-			<% @events&.suggestions&.each do |suggestion| %>
-				<a href="<%= search_index_path({q: suggestion}) %>" class="me-chip mdc-chip">
-					<span class="inline-block px-4 py-2 mt-2 mr-2 text-gray-800 rounded-full bg-gray-50 hover:bg-gray-50"><%= suggestion %></span>
-				</a>
-			<% end %>
-		</div>
+<div id="main-content" class="md:grid md:grid-cols-12 max-w-screen-xl mx-auto">
+	<% unless mobile_device? %>
+		<section class="hidden md:inline-block md:col-span-3 md:bg-white md:pt-5 sticky"
+						 id="left-sidebar"
+						 data-controller="simple-scrollbar"
+						 style="height: calc(100vh - 48px); top: 48px">
+			<%= render LeftSidebar::MyAgendaComponent.new(search_result: @liked_events, user: current_user) %>
+		</section>
 	<% end %>
-
-	<% if @events.try { |events| events.size > 0 } %>
-		<%= render partial: 'events/group_by_day_list', locals: {
-				events: @events,
-				user:   current_user
-		} %>
-	<% elsif @events.try { |events| events.size == 0 } %>
-		<h2 class="text-2xl">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
-	<% elsif @categories.present? %>
-		<div class="mx-auto md:w-9/12">
-<!--			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-400 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-5xl">-->
-<!--				Categorias-->
-<!--			</h2>-->
-			<div class="grid grid-cols-2 gap-3 px-5 mt-5 md:px-0">
-				<% @categories.each do |category| %>
-					<a href="<%= category_events_path category %>" class="antialiased bg-gray-50 cursor-pointer duration-200 flex h-20 inline-block justify-start mdc-chip me-chip px-4 py-1 rounded-lg select-none tap-highlight-none transform transition-colors w-full">
-						<div class="text-lg font-semibold text-gray-400">
-							<%= category %>
-						</div>
+	<section id="main-sidebar" class="col-span-12 md:col-span-5">
+		<%= notice %>
+		<% if (@search_result&.suggestions.present? rescue false) %>
+			<div class="px-5 mx-auto mb-10 md:px-0">
+				<h2 class="font-semibold text-gray-800">Você quis dizer?</h2>
+				<% @search_result&.suggestions&.each do |suggestion| %>
+					<a href="<%= search_index_path({ q: suggestion }) %>" class="me-chip mdc-chip">
+						<span class="inline-block px-4 py-2 mt-2 mr-2 text-gray-800 rounded-full bg-gray-50 hover:bg-gray-50"><%= suggestion %></span>
 					</a>
 				<% end %>
 			</div>
+		<% end %>
+		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
+			<% if @search_result.try { |events| events.size > 0 } %>
+				<div class="font-bold mt-5 px-10 text-lg">
+					Eventos encontrados para: <%= params[:q] %>
+				</div>
+				<%= render MainSidebar::GroupByDayListComponent.new(search_result: @search_result, user: current_user, open_in_sidebar: true) %>
+			<% else %>
+				<h2 class="text-2xl">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
+				<% if @categories.present? %>
+					<div class="mx-auto">
+						<div class="grid grid-cols-2 gap-3 px-5 mt-5 md:px-0">
+							<% @categories.each do |category| %>
+								<a href="<%= category_events_path category %>" class="antialiased bg-gray-50 cursor-pointer duration-200 flex h-20 inline-block justify-start mdc-chip me-chip px-4 py-1 rounded-lg select-none tap-highlight-none transform transition-colors w-full">
+									<div class="text-lg font-semibold text-gray-400">
+										<%= category %>
+									</div>
+								</a>
+							<% end %>
+						</div>
+					</div>
+				<% end %>
+			<% end %>
 		</div>
+	</section>
+	<% unless mobile_device? %>
+		<section id="right-sidebar" class="hidden md:inline-block md:bg-white md:h-full md:col-span-4 will-change">
+			<div data-controller="toggle-loader"
+					 data-toggle-loader-listener-on="horizontal-event#open-event:before"
+					 data-toggle-loader-listener-off="horizontal-event#open-event:success"
+					 class="px-5 sticky top-24 z-10">
+				<div id="open-event"
+						 data-target="toggle-loader.off">
+					<%= render MainSidebar::LargeEventComponent.new(user: current_user) %>
+				</div>
+				<div
+					class="flex items-center justify-center hidden h-16 mt-5 bg-white border border-gray-100 shadow-lg h-screen-8/10 rounded-xl text-md"
+					data-target="toggle-loader.on">
+					Carregando
+					<svg data-target="toggle-loader.onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path fill="none" d="M0 0h24v24H0V0z"/>
+						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+					</svg>
+				</div>
+			</div>
+		</section>
 	<% end %>
 </div>
+
