--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -26,7 +26,7 @@
 				<div class="font-bold mt-5 px-10 text-lg">
 					Eventos encontrados para: <%= params[:q] %>
 				</div>
-				<%= render MainSidebar::GroupByDayListComponent.new(events: @search_result, user: current_user, open_in_sidebar: true) %>
+				<%= render MainSidebar::GroupByDayListComponent.new(events: @founded_events, user: current_user, open_in_sidebar: true) %>
 			<% else %>
 				<h2 class="text-2xl">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
 				<% if @categories.present? %>
