--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -29,36 +29,27 @@
 	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
 
 	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
-	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Varela+Round|Roboto:300,400,500,700&display=swap">
 
 	<%= Gon::Base.render_data %>
 
+	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 	<%= javascript_pack_tag 'dashboard', 'data-turbolinks-track': 'reload', defer: true %>
-	<%#= javascript_pack_tag 'train', 'data-turbolinks-track': 'reload', defer: true if params[:action] == 'train' %>
-
-
 </head>
 <body>
 
-<%= render partial: "layouts/top-app-bar" %>
-<section class="me-page me-page--justify-center">
+<div class="md:shadow-lg md:sticky md:top-0 w-full mx-auto transition-transform duration-100 transform bg-white shadow-sm z-50 <%= class_names('sticky top-0': content_for?(:top_app_bar_title)) %>"
+		 data-controller="head"
+		 data-reflex-permanent
+		 data-target="head.head">
+	<%= render partial: 'layouts/top-app-bar' %>
+</div>
+
+<section class="max-w-screen-xl mx-auto my-5">
 	<%= yield %>
 </section>
 
-<% if notice %>
-	<div data-controller="snackbar" class="me-snackbar mdc-snackbar">
-		<div class="mdc-snackbar__surface">
-			<div class="mdc-snackbar__label" role="status" aria-live="polite">
-				<%= notice %>
-			</div>
-			<div class="mdc-snackbar__actions">
-				<button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
-			</div>
-		</div>
-	</div>
-<% end %>
-<%= render partial: 'layouts/footer' %>
 </body>
 </html>
