--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -5,7 +5,7 @@
 				<div class="<%= helpers.class_names('sticky bg-white z-10 flex-1 px-5 pt-4 pb-2 leading-6 text-gray-700 md:leading-normal md:px-5',
 																						{ 'top-0':  helpers.mobile_device?,
 																							'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
-																							'top-16': !helpers.mobile_device? && current_page?('/minha-agenda') }) %>">
+																							'top-16': !helpers.mobile_device? }) %>">
 					<h2 class="text-xl font-semibold md:text-2xl"><%= helpers.day_of_week(group[0].to_date).titlecase %></h2>
 					<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
 						<div class="-mt-1 border-b-2 border-green-500  text-sm w-content"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
